examples/test/testpolicy16996.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16996
  namespace: namespace141
spec:
  podSelector:
    matchLabels:
      key0: value7
      key13: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value38
          key21: value7
          key0: value28
      podSelector:
        matchLabels:
          key21: value39
          key44: value25
          key48: value0
